Continues working on IDSrv and try to solve the 500 error

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div>
-    <p>AC Identity Server</p>
+    <br />
+    <h1>AC Identity Server</h1>
     <br />
     <p>Built by Alva Chien</p>
 </div>
