Add support for ACGallery

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
     <br />
     <h1>AC Identity Server</h1>
     <br />
-    <p>Built by Alva Chien</p>
+    <p>Built by Alva Chien, 2016</p>
 </div>
