Refine the layout part

--- a/src/acidserver/Views/Shared/_Layout.cshtml
+++ b/src/acidserver/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - acidserver</p>
+            <p>&copy; 2016 - Alva Chien</p>
         </footer>
     </div>
 
