Refine the index page

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -3,8 +3,16 @@
 }
 
 <div>
-    <br />
-    <h1>AC Identity Server</h1>
-    <br />
-    <p>Built by Alva Chien, 2016</p>
+    <div class="jumbotron">
+        <h1>AC Identity Server</h1>
+        <p>Built by Alva Chien, 2016</p>
+        <br />
+        <p>Provides Identity for the following web apps:</p>
+        <p>
+            <a class="btn btn-primary btn-lg" href="http://achihui.azurewebsites.net" target="_blank" role="button">AC HIH</a>
+            <a class="btn btn-primary btn-lg" href="http://acgallery.azurewebsites.net" target="_blank" role="button">AC Gallery</a>
+            <a class="btn btn-primary btn-lg" href="http://acknowledge.azurewebsites.net" target="_blank" role="button">AC Knowledge</a>
+            <a class="btn btn-primary btn-lg" href="http://acimgexif.azurewebsites.net" target="_blank" role="button">AC Image EXIF Viewer</a>
+        </p>
+    </div>
 </div>
