Make the ID server work

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿<div class="welcome-page">
+﻿@{
+    ViewData["Title"] = "Home Page";
+}
+
+<div>
     <div class="jumbotron">
         <h1>AC Identity Server</h1>
         <p>Built by Alva Chien, 2016</p>
-
         <br />
         <p>Provides Identity for the following web apps:</p>
         <p>
