--- a/src/acidserver/Views/_ViewImports.cshtml
+++ b/src/acidserver/Views/_ViewImports.cshtml
@@ -1,1 +1,6 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using acidserver
+@using acidserver.Models
+@using acidserver.Models.AccountViewModels
+@using acidserver.Models.ManageViewModels
+@using Microsoft.AspNetCore.Identity
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
