--- a/src/acidserver/Views/Account/LoggedOut.cshtml
+++ b/src/acidserver/Views/Account/LoggedOut.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentityServer4.Quickstart.UI.Models.LoggedOutViewModel
+﻿@model acidserver.UI.Models.LoggedOutViewModel
 
 <div class="page-header">
     <h1>
