--- a/src/acidserver/Views/Account/Logout.cshtml
+++ b/src/acidserver/Views/Account/Logout.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentityServer4.Quickstart.UI.Models.LogoutViewModel
+﻿@model acidserver.UI.Models.LogoutViewModel
 
 <div class="logout-page">
     <div class="page-header">
