Correct the About and Contact page

--- a/src/acidserver/Views/Home/About.cshtml
+++ b/src/acidserver/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>AC Identity Server App, provides the identification service for web apps.</p>
