--- a/src/acidserver/Views/Home/Contact.cshtml
+++ b/src/acidserver/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Shanghai<br />
+    Shanghai, China<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    0086 21 XXXXXXXX
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Contact me:</strong> <a href="mailto:alvachien@163.com">alvachien@163.com</a><br />
 </address>
