Refine the UI part by adding texts

--- a/src/acidserver/Views/Home/Contact.cshtml
+++ b/src/acidserver/Views/Home/Contact.cshtml
@@ -5,12 +5,12 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    Shanghai<br />
+    Alva Chien<br />
     Shanghai, China<br />
     <abbr title="Phone">P:</abbr>
     0086 21 XXXXXXXX
 </address>
 
 <address>
-    <strong>Contact me:</strong> <a href="mailto:alvachien@163.com">alvachien@163.com</a><br />
+    <strong>Contact me via mail:</strong> <a href="mailto:alvachien@163.com">alvachien@163.com</a><br />
 </address>
