--- a/src/acidserver/Views/Home/About.cshtml
+++ b/src/acidserver/Views/Home/About.cshtml
@@ -5,3 +5,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>AC Identity Server App, provides the identification service for web apps.</p>
+<br />
+<p>
+    Special credits to <a href="https://github.com/IdentityServer/IdentityServer4">Identity Server 4</a>
+</p>
