--- a/src/acidserver/Views/Shared/_Layout.cshtml
+++ b/src/acidserver/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - Alva Chien </p>
+            <p>&copy; 2016 - Alva Chien | An open source project hosted on <a href="https://github.com/alvachien/acidserver">Github</a></p>
         </footer>
     </div>
 
