Update the year info.

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
 <div>
     <div class="jumbotron">
         <h1>AC Identity Server</h1>
-        <p>Built by Alva Chien, 2016</p>
+        <p>Built by Alva Chien, 2016 - 2017</p>
         <br />
-        <p>Provides Identity for the following web apps:</p>
+        <p>Provides Identity for the following web apps (hosted on Microsoft Azure):</p>
         <p>
             <a class="btn btn-primary btn-lg" href="http://achihui.azurewebsites.net" target="_blank" role="button">AC HIH</a>
             <a class="btn btn-primary btn-lg" href="http://acgallery.azurewebsites.net" target="_blank" role="button">AC Gallery</a>
