--- a/src/acidserver/Views/Shared/_Layout.cshtml
+++ b/src/acidserver/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - Alva Chien | An open source project hosted on <a href="https://github.com/alvachien/acidserver">Github</a></p>
+            <p>&copy; 2016 - 2017, Alva Chien | An open source project hosted on <a href="https://github.com/alvachien/acidserver">Github</a></p>
         </footer>
     </div>
 
