--- a/src/acidserver/Views/Account/LoggedOut.cshtml
+++ b/src/acidserver/Views/Account/LoggedOut.cshtml
@@ -1,6 +1,11 @@
-﻿@model acidserver.UI.Models.LoggedOutViewModel
+﻿@model LoggedOutViewModel
 
-<div class="page-header">
+@{
+    // set this so UI rendering sees an anonymous user
+    Context.User = new System.Security.Claims.ClaimsPrincipal(new System.Security.Claims.ClaimsIdentity());
+}
+
+<div class="page-header logged-out">
     <h1>
         Logout
         <small>You are now logged out</small>
@@ -9,13 +14,21 @@
     @if (Model.PostLogoutRedirectUri != null)
     {
         <div>
-            Click <a href="@Model.PostLogoutRedirectUri">here</a> to return to the
+            Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
             <span>@Model.ClientName</span> application.
         </div>
     }
 
     @if (Model.SignOutIframeUrl != null)
     {
-        <iframe style="display:none" width="0" height="0" class="signout" src="@Model.SignOutIframeUrl"></iframe>
+        <iframe width="0" height="0" class="signout" src="@Model.SignOutIframeUrl"></iframe>
     }
 </div>
+
+@section scripts
+{
+    @if (Model.AutomaticRedirectAfterSignOut)
+    {
+        <script src="~/js/signout-redirect.js"></script>
+    }
+}
