--- a/src/acidserver/Views/_ViewImports.cshtml
+++ b/src/acidserver/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using acidserver.Models.AccountViewModels
 @using acidserver.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
+@using acidserver.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
