Make the UI suits for Bootstrap V4

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -7,10 +7,11 @@
         <h1>AC Identity Server</h1>
         <p>Built by Alva Chien, 2016 - 2017</p>
         <br />
-        <p>Provides Identity for the following web apps (hosted on Microsoft Azure):</p>
+        <p>Provides Identity for the following web apps (hosted on Microsoft Azure or Aliyun):</p>
         <p>
-            <a class="btn btn-primary btn-lg" href="http://achihui.azurewebsites.net" target="_blank" role="button">AC HIH</a>
+            <a class="btn btn-primary btn-lg" href="http://achihui.azurewebsites.net" target="_blank" role="button">H.I.H.</a>
             <a class="btn btn-primary btn-lg" href="http://acgallery.azurewebsites.net" target="_blank" role="button">AC Gallery</a>
+            <a class="btn btn-primary btn-lg" href="http://118.178.58.187:5230" target="_blank" role="button">Math Exercise</a>
         </p>
     </div>
 </div>
