--- a/src/acidserver/Views/Shared/_Layout.cshtml
+++ b/src/acidserver/Views/Shared/_Layout.cshtml
@@ -43,15 +43,15 @@
     </div>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.slim.js"></script>
-        <script src="~/lib/popper.js/dist/umd/popper.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.js"></script>
+        <script src="https://cdn.bootcss.com/popper.js/1.12.3/umd/popper.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap/4.0.0-beta/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
-        <script src="~/lib/jquery/dist/jquery.slim.min.js"></script>
-        <script src="~/lib/popper.js/dist/umd/popper.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js"></script>
+        <script src="https://cdn.bootcss.com/popper.js/1.12.3/umd/popper.min.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
