--- a/src/acidserver/Views/Home/Contact.cshtml
+++ b/src/acidserver/Views/Home/Contact.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    Alva Chien<br />
-    Shanghai, China<br />
+    One Microsoft Way<br />
+    Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
-    0086 21 XXXXXXXX
+    425.555.0100
 </address>
 
 <address>
-    <strong>Contact me via mail:</strong> <a href="mailto:alvachien@163.com">alvachien@163.com</a><br />
+    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
