--- a/src/acidserver/Views/_ViewImports.cshtml
+++ b/src/acidserver/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using acidserver
+﻿@using Microsoft.AspNetCore.Identity
+@using acidserver
 @using acidserver.Models
 @using acidserver.Models.AccountViewModels
 @using acidserver.Models.ManageViewModels
