--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -1,39 +1,17 @@
 ﻿@{
-    var version = typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();
+    var version = typeof(acidserver.Startup).Assembly.GetName().Version.ToString();
 }
 
-<div class="welcome-page">
-    <div class="row page-header">
-        <div class="col-sm-10">
-            <h1>
-                <img class="icon" src="~/icon.jpg">
-                Welcome to IdentityServer4
-                <small>(version @version)</small>
-            </h1>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-8">
-            <p>
-                IdentityServer publishes a
-                <a href="~/.well-known/openid-configuration">discovery document</a>
-                where you can find metadata and links to all the endpoints, key material, etc.
-            </p>
-        </div>
-        <div class="col-sm-8">
-            <p>
-                Click <a href="~/grants">here</a> to manage your stored grants.
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-8">
-            <p>
-                Here are links to the
-                <a href="https://github.com/identityserver/IdentityServer4">source code repository</a>,
-                and <a href="https://github.com/IdentityServer/IdentityServer4/tree/master/samples">ready to use samples</a>.
-            </p>
-        </div>
+<div>
+    <div class="jumbotron">
+        <h1>AC Identity Server <small>(version @version)</small></h1>
+        <p>Built by Alva Chien, 2016 - 2020</p>
+        <br />
+        <p>Provides Identity for the following web apps (hosted on Microsoft Azure or Aliyun):</p>
+        <p>
+            <a class="btn btn-primary btn-lg" href="http://achihui.azurewebsites.net" target="_blank" role="button">H.I.H.</a>
+            <a class="btn btn-primary btn-lg" href="http://acgallery.azurewebsites.net" target="_blank" role="button">AC Gallery</a>
+            <a class="btn btn-primary btn-lg" href="http://118.178.58.187:5230" target="_blank" role="button">Math Exercise</a>
+        </p>
     </div>
 </div>
