Ensure deploy to aliyun works

--- a/src/acidserver/Views/Home/Index.cshtml
+++ b/src/acidserver/Views/Home/Index.cshtml
@@ -9,9 +9,10 @@
         <br />
         <p>Provides Identity for the following web apps (hosted on Microsoft Azure or Aliyun):</p>
         <p>
-            <a class="btn btn-primary btn-lg" href="http://achihui.azurewebsites.net" target="_blank" role="button">H.I.H.</a>
-            <a class="btn btn-primary btn-lg" href="http://acgallery.azurewebsites.net" target="_blank" role="button">AC Gallery</a>
-            <a class="btn btn-primary btn-lg" href="http://118.178.58.187:5230" target="_blank" role="button">Math Exercise</a>
+            <a class="btn btn-primary btn-lg" href="https://www.alvachien.com" target="_blank" role="button">Website Main Page</a>
+            <a class="btn btn-primary btn-lg" href="https://www.alvachien.com/hih" target="_blank" role="button">H.I.H.</a>
+            <a class="btn btn-primary btn-lg" href="https://www.alvachien.com/gallery" target="_blank" role="button">AC Gallery</a>
+            <a class="btn btn-primary btn-lg" href="https://www.alvachien.com/math" target="_blank" role="button">Math Exercise</a>
         </p>
     </div>
 </div>
