--- a/src/acidserver/Views/Account/Logout.cshtml
+++ b/src/acidserver/Views/Account/Logout.cshtml
@@ -3,19 +3,13 @@
 <div class="logout-page">
     <div class="page-header">
         <h1>Logout</h1>
+        <p>Would you like to logout of ACIDServer?</p>
     </div>
 
-    <div class="row">
-        <div class="col-sm-6">
-            <p>Would you like to logout of IdentityServer?</p>
-            <form asp-action="Logout">
-                <input type="hidden" name="logoutId" value="@Model.LogoutId"  />
-                <fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-primary">Yes</button>
-                    </div>
-                </fieldset>
-            </form>
+    <form asp-action="Logout">
+        <input type="hidden" name="logoutId" value="@Model.LogoutId" />
+        <div class="form-group">
+            <button class="btn btn-primary">Yes</button>
         </div>
-    </div>
+    </form>
 </div>
