--- a/src/acidserver/Views/Shared/_Nav.cshtml
+++ b/src/acidserver/Views/Shared/_Nav.cshtml
@@ -13,7 +13,7 @@
 
         <a href="~/" class="navbar-brand">
             <img src="~/icon.png" class="icon-banner">
-            IdentityServer4
+            AC ID Server (Based on IdentityServer)
         </a>
 
         @if (!string.IsNullOrWhiteSpace(name))
