--- a/src/acidserver/Views/Shared/_LoginPartial.cshtml
+++ b/src/acidserver/Views/Shared/_LoginPartial.cshtml
@@ -16,10 +16,10 @@
 }
 else
 {
-    <li class="nav-item">
+@*    <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
-    <li class="nav-item">
+*@    <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
